# nirvana

./: README.md  setup.cfg
src/: main.py
src/nirvana/: main.py
src/nirvana/coalesce/: coalesce.py  coalesce_strategies.py
src/nirvana/fetch/: fetch.py  fetch_insurance_data.py
tests/coalesce/: test_coalesce.py  test_coalesce_strategies.py
