[metadata]
name = nirvana
version = 0.1
author = Jimmy Chen
author-email = somebody@somewhere.com
summary = Nirvana code samples
description-file = README.md
home-page = https://github.com/jimmylchen/nirvana
requires-dist = setuptools
classifier =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Software Development :: Build Tools
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Archiving :: Packaging


[options]
packages = find:
install_requires =  requests
setup_requires =
    pytest-runner
    wheel
tests_requires =
    pytest

[options.extras_require]
dev =
    pytest

[options.packages.find]
exclude = tests
